# classification_pymetrics

./: .gitignore  README.md  mypy.ini  pyproject.toml
original_files/: labels.csv  main.py  preds.csv
src/: __init__.py  cli.py  exceptions.py  io.py  metrics.py
src/classification_pymetrics/: __init__.py  cli.py  io.py  metrics.py
tests/: test_io.py  test_metrics.py
